# bevy-ascii-game

./: .gitignore  Cargo.toml  bevy-ascii-game.d.ts  bevy-ascii-game.js  bevy-ascii-game_bg.wasm.d.ts  cert.pem  debug.sh  key.pem  log  main.cap  out.file  render-graph.dot  rootCA.crt  rootCA.key  todo.md
.github/workflows/: Rust.yaml  bevy-deploy-pages.yaml  rust.yml
assets/: output.ron
assets/anim/horse/: horse.agraph.ron
assets/anim/horse/states/: gallop.anim.ron
assets/anim/horse/states/mounted/: gallop.anim.ron
assets/anim/horse/states/unmounted/: gallop.anim.ron
assets/anim/player/: player.agraph.ron  player_running.anim.ron
assets/anim/player/states/: air_idle.anim.ron  air_strafe.anim.ron  idle.anim.ron  lunging.anim.ron
assets/anim/player/states/mounted/: gallop.anim.ron  idle.anim.ron
assets/anim/player/transitional/: lunging.anim.ron
assets/art/bridge/: tileset.art
assets/art/dj/: dj.art
assets/art/horse/: gallop_2s.art
assets/art/horse/legacy/: gallop.art
assets/art/horse/mounted/: gallop.art  idle.art
assets/art/horse/unmounted/: gallop.art  idle.art
assets/art/player/mounted/: gallop.art  idle.art
assets/art/testing/: castle.art
assets/assets/anim/player/states/: air_strafe.anim.ron
assets/shaders/: glyph_generation.wgsl  glyph_raster copy.wgsl  glyph_raster.wgsl  glyph_render.wgsl
assets/tilemaps/: bridge_base.tilemap.ron  bridge_top.ron  bridge_top.tilemap.ron  cave_map.tilemap.ron  output.tilemap.ron  output_bridge.tilemap.ron  sprite.tilemap.ron
assets/tilemaps/cave_map/: 0_0.chunk.ron
assets/tilesets/: bridge.tileset.ron
crates/ascii-ui/: Cargo.toml
crates/ascii-ui/src/: lib.rs  list_widget.rs  plugin.rs  widget_builder.rs
crates/ascii-ui/src/attachments/: border.rs  flex.rs  main_axis.rs  mod.rs  padding.rs  root.rs  sized_box.rs  stack.rs
crates/ascii-ui/src/layout/: build_layout.rs  constraint.rs  despawn_layout.rs  mod.rs  plugin.rs  positioned.rs  render_clip.rs  widget_layout.rs
crates/ascii-ui/src/mouse/: input.rs  mod.rs
crates/ascii-ui/src/render/: bundle.rs  clear.rs  mod.rs  plugin.rs
crates/ascii-ui/src/render/attachments/: border.rs  mod.rs
crates/ascii-ui/src/render/widgets/: divider.rs  mod.rs  text.rs  texture.rs
crates/ascii-ui/src/theme/: mod.rs  plugin.rs
crates/ascii-ui/src/widgets/: button.rs  checkbox.rs  column.rs  container.rs  divider.rs  flex.rs  grid.rs  list_builder.rs  mod.rs  plugin.rs  row.rs  scrolling_view.rs  stack.rs  tab_view.rs  text.rs  text_edit.rs  texture.rs
crates/glyph-render/: Cargo.toml
crates/glyph-render/src/: lib.rs
crates/glyph-render/src/atlas/: builder.rs  mod.rs  plugin.rs
crates/glyph-render/src/font/: mod.rs
crates/glyph-render/src/glyph_animation/: mod.rs  player.rs
crates/glyph-render/src/glyph_animation/loader/: meta.rs  mod.rs
crates/glyph-render/src/glyph_animation_graph/: bundle.rs  mod.rs  player.rs  plugin.rs
crates/glyph-render/src/glyph_buffer/: extract.rs  mod.rs  prepare.rs
crates/glyph-render/src/glyph_render_plugin/: generation_descriptors.rs  mod.rs  node.rs  raster_descriptors.rs  render_resources.rs
crates/glyph-render/src/glyph_sprite/: loader.rs  mod.rs
crates/glyph-render/src/glyph_texture/: mod.rs
crates/grid-physics/: Cargo.toml
crates/grid-physics/src/: actor.rs  collision.rs  debug.rs  free.rs  gravity.rs  grid.rs  lib.rs  movement.rs  plugin.rs  position.rs  sets.rs  solid.rs  velocity.rs
crates/spatial-grid/: Cargo.toml
crates/spatial-grid/src/: debug.rs  depth.rs  direction.rs  global_position.rs  grid.rs  lib.rs  position.rs  remainder.rs
crates/text-util/: Cargo.toml
crates/text-util/src/: lib.rs  text_mirror.rs
editor/: tilemap.d.ts  tilemap.js  tilemap_bg.wasm.d.ts
editor/assets/art/horse/legacy/: gallop_4s.art
editor/assets/art/source/: erak.xcf
editor/assets/shaders/: glyph_render.wgsl
game/: bevy-ascii-game.d.ts  bevy-ascii-game.js  bevy-ascii-game_bg.wasm.d.ts
game/assets/anim/player/states/: running.anim.ron
game/assets/art/cave/: cave.art
game/assets/art/horse/: gallop_4s.art
game/assets/art/player/: player_jump.art  player_running copy.art
game/assets/shaders/: glyph_render.wgsl
game/assets/tilemaps/cave_map/: 0_0.chunk.ron
game/assets/tilesets/: cave.tileset.ron
src/: lib.rs  main.rs
src/atlas/: builder.rs  mod.rs  plugin.rs
src/debug/: mod.rs  spatial.rs  ui.rs
src/debug_menu/: inspector.rs  mod.rs  plugin.rs  setup.rs  state.rs  update.rs
src/ecs_utils/: ownership.rs
src/font/: mod.rs
src/glyph_animation/: mod.rs
src/glyph_animation/loader/: meta.rs  mod.rs
src/glyph_animation_graph/: bundle.rs  mod.rs  player.rs  plugin.rs
src/glyph_gen_pipeline/: mod.rs  node.rs
src/glyph_pipeline/: mod.rs  node.rs
src/glyph_raster_pipeline/: mod.rs  node.rs
src/glyph_render_plugin/: generation_descriptors.rs  mod.rs  node.rs  raster_descriptors.rs
src/mount/: mod.rs
src/mount/horse/: mod.rs  spawn.rs
src/physics/: actor.rs  collision.rs  direction.rs  free.rs  gravity.rs  mod.rs  movement.rs  plugin.rs  position.rs  solid.rs  velocity.rs
src/physics_grids/: mod.rs  parallax.rs  resize.rs
src/player/: mod.rs  reset.rs  system_sets.rs
src/player/animation/: mod.rs
src/player/input/: controller.rs  keyboard.rs  mod.rs
src/player/interaction/: mod.rs
src/player/movement/: direction.rs  jump.rs  lunge.rs  mod.rs  walk.rs
src/player/state/: mod.rs
src/player/sword/: mod.rs
src/player_plugin/: mod.rs
src/tilemap/: asset.rs  chunk.rs  component.rs  extract.rs  loader.rs  meta.rs  mod.rs  plugin.rs  saver.rs
src/tilemap/loader/: meta.rs  mod.rs
src/tileset/: asset.rs  mod.rs  plugin.rs
src/tileset/loader/: meta.rs  mod.rs
src/widgets/: mod.rs
src/widgets/debug_options/: mod.rs
src/widgets/info_counts/: mod.rs
web/: bevy-ascii-game.d.ts  bevy-ascii-game.js  index.html
web/assets/art/player/: player_diagonal_attack.art
web/assets/shaders/: glyph_raster.wgsl
web/editor/: index.html  tilemap.d.ts  tilemap.js  tilemap_bg.wasm.d.ts
web/game/: bevy-ascii-game.js  index.html
(+11 files in other folders)
