[package]
name = "bevy-ascii-game"
version = "0.1.0"
edition = "2021"
default-run = "bevy-ascii-game"

[dependencies]
anyhow = "1.0.79"
serde = "1.0.195"
ron = "0.8.1"
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "multi_threaded",
    "x11",
    "bevy_gizmos",
    "webgl2",
    # "wayland",
] }
# bevy_animation = { version = "0.14.0-rc.4" }
ascii-ui = { path = "crates/ascii-ui" }
grid-physics = { path = "crates/grid-physics" }
glyph-render = { path = "crates/glyph-render" }
text-util = { path = "crates/text-util" }
spatial-grid = { path = "crates/spatial-grid" }
async-fs = "2.1.1"
smol_str = "0.2.2"
bevy_rand = { version = "0.8", features = ["rand_chacha", "wyrand"] }
rand_core = "0.6.4"

[lib]

[[bin]]
name = "mirror"

[[bin]]
name = "tilemap"

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 0

# [profile.dev.package.glyph-render]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# incremental = true
# codegen-units = 16

# [profile.dev.package.ascii-ui]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# incremental = true
# codegen-units = 16

# [profile.dev.package.grid-physics]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# incremental = true
# codegen-units = 16


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# incremental = true
# codegen-units = 16
