[package]
name = "ascii-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bevy_mod_debugdump = "0.9.0"
bytemuck = "1.14.0"
rand_core = "0.6.4"
bevy_rand = "0.4"
bevy_prng = { version = "0.2", features = ["rand_chacha"] }
swash = "0.1.8"
wgpu = "0.17.2"
bevy_common_assets = { version = "0.9.0", features = ["ron"] }
serde = "1.0.195"
futures = "0.3.30"
ron = "0.8.1"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    # "bevy_text",
    # "bevy_ui",
    "multi-threaded",
    # "hdr",
    # "vorbis",
    "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    # "tonemapping_luts",
    # "default_font",
    # "webgl2", 

    "dynamic_linking",
]
[dependencies.spatial-grid]
path = "../spatial-grid"
[dependencies.glyph-render]
path = "../glyph-render"


[lib]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
