[package]
name = "ascii-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spatial-grid = { path = "../spatial-grid" }
glyph-render = { path = "../glyph-render" }
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_window",
] }


[lib]
