[package]
name = "glyph-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.0"
swash = "0.1.8"
wgpu = "0.17.2"
serde = "1.0.195"
ron = "0.8.1"
text-util = { path = "../text-util" }
spatial-grid = { path = "../spatial-grid" }
bevy = { version = "0.12.1", default_features = false, features = [] }


[lib]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
