[package]
name = "glyph-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.0"
swash = "0.1.8"
# wgpu = { version = "0.19.1", default-features = false, features = ["webgl"] }
serde = "1.0.195"
ron = "0.8.1"
text-util = { path = "../text-util" }
spatial-grid = { path = "../spatial-grid" }
bevy = { version = "0.14.2", default-features = false, features = [] }


[lib]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
