[package]
name = "glyph-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.0"
swash = "0.1.8"
serde = "1.0.195"
ron = "0.8.1"
text-util = { path = "../text-util" }
spatial-grid = { path = "../spatial-grid" }
bevy = { version = "0.15.0", default-features = false, features = [] }


[lib]
