[package]
name = "grid-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.12.1"
bevy_derive = "0.12.1"
bevy_math = "0.12.1"
bevy_reflect = "0.12.1"
bevy_app = "0.12.1"
bevy_time = "0.12.1"
bevy_utils = "0.12.1"
bevy_transform = "0.12.1"
spatial-grid = { path = "../spatial-grid" }


[lib]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
