[package]
name = "grid-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13.0"
bevy_derive = "0.13.0"
bevy_math = "0.13.0"
bevy_reflect = "0.13.0"
bevy_app = "0.13.0"
bevy_time = "0.13.0"
bevy_transform = "0.13.0"
spatial-grid = { path = "../spatial-grid" }


[lib]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
