[package]
name = "text-util"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.14.3"

[lib]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
